Prod/src/objects/Functional_Matrix_Badge_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Date_Achieved_Field__c</fullName>
        <label>Date Achieved Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Field__c</fullName>
        <label>Status Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Field__c</fullName>
        <inlineHelpText>Maps the field label of the entered field to Badge.Type</inlineHelpText>
        <label>Type Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Functional Matrix Badge Mapping</label>
    <pluralLabel>Functional Matrix Badge Mappings</pluralLabel>
</CustomObject>